--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Hello, world! I'm David Freeman
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Anne Chew's Blog
+description: > 
+  Anne's personal blog, to share my thoughts about what documentation
+  practices, tools, etc.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "https://annecyh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -10,13 +9,16 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Anne Chew # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author-img: annechewyiihuei.jpg # add your photo
+about-author: > # add description
+  A technical author who translates "Engineering language" to English.
+  Experienced in software and API reference documentation. Always eager to
+  explore new areas and learn new skills.
 social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-facebook: AnneCYHPhotography # add your Facebook handle
+social-github: annecyh # add your Github handle
+social-linkedin: anne-yii-huei-chew-1bb97626 # add your Linkedin handle
+social-email: ayhchew@yahoo.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
